2006-12-02  Thomas Moschny  <thomas.moschny@gmx.de>

	* annotate.cc (do_annotate, do_annotate_node): Use a
	boost::multi_index_container instead of a priority_queue together
	with a map to store the work units to be processed.

2006-12-02  Thomas Moschny  <thomas.moschny@gmx.de>

	* annotate.cc: Minor cleanups.

2006-12-01  Thomas Moschny  <thomas.moschny@gmx.de>

	* annotate.cc (do_annotate_node): Remove unnecessary variable.

2006-11-27  Thomas Moschny  <thomas.moschny@gmx.de>

	* annotate.cc (do_annotate, do_annotate_node): use markings
	together with heights in order to significantly speed up annotate.

2006-11-22  Patrick Mauritz  <oxygene@studentenbude.ath.cx>

	* rev_height.cc: add memcmp to global namespace for sunpro.

2006-11-20  Matt Johnston  <matt@ucc.asn.au>

	* tests/mtn_execute_attr_respects_umask/: use ls -l rather than
	stat -c, since the former is posix defined.

2006-11-20  Thomas Keller  <me@thomaskeller.biz>

       * moved automate get_file into cmd_files.cc
       * new automate command get_file_of which is basically mtn cat
       * replaced exception by user error for get_file and get_file_of
       if no arguments are given 

2006-11-18  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.monotone.init (d_start): Remove the
	branch argument, which was all-inklusive anyway.
	* debian/changelog: Mark a new version to make it possible to
	write a ...
	* debian/NEWS: New news item indicating to Debian users that
	they may need to do some changes if they want their servers
	to still run.

2006-11-18  Timtohy Brownawell  <tbrownaw@gmail.com>

	Make 'serve' always serve everything, and no longer take
	include/exclude patterns on the command line.

	Make the testsuite not use --nostd, so it can use the standard
	permissions hooks for tests that need restricted serve.

	Un-xfail the mtn:execute / umask test, since not having the
	standard hooks available was what made it not work.

2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>